--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ dependencies = [
     "fastapi>=0.109.0",
     "uvicorn>=0.27.0",
     "websockets>=12.0",
+    
+    # MCP (Model Context Protocol)
+    "mcp>=0.9.0",
 ]
 
 [project.optional-dependencies]
@@ -96,3 +99,4 @@ strict_equality = true
 [project.scripts]
 taas-server = "taas_server.server:main"
 taas-agent = "llm_agent.cli.agent_cli:main"
+taas-mcp = "taas_server.tools.mcp_server:main"
