--- a/E:antigravitymcp-frameworkdelete_itScriptsactivate/pyproject.toml
+++ b/E:antigravitymcp-frameworkdelete_itScriptsactivate/pyproject.toml
@@ -7,8 +7,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 
 dependencies = [
-    # MCP Protocol
-    "mcp>=1.0.0",
+    # MCP (Model Context Protocol)
+    "mcp>=0.9.0",
+    
+    # Web UI
+    "gradio>=4.0.0",
     
     # Web Framework
     "fastapi>=0.109.0",
@@ -59,6 +62,7 @@ dev = [
 mcp-server = "mcp_framework.server.mcp_gateway:main"
 mcp-agent = "mcp_framework.cli.main:main"
 mcp-inspector = "mcp_framework.client.mcp_inspector:main"
+mcp-ui = "mcp_framework.ui.web_ui:main"
 
 [build-system]
 requires = ["hatchling"]
